Configured database for local development